# manycore_visualiser

./: README.md  bun.lockb  index.html  licenses.html  package.json  tailwind.config.js  vite.config.ts
public/manual/: 404.html  additional_software.html  configuring.html  editing.html  exporting_loading.html  hovering.html  index.html  input.html  print.html  requirements.html  searchindex.js  searchindex.json
public/manual/configuring/: border_routers.html  coloured_text.html  fill.html  font.html  override.html  routing.html  static_text.html  task.html  text.html
public/manual/css/: manycore.css
public/manual/exporting/: conf.html  input.html  rendering.html
public/manual/exporting/rendering/: freeform.html  png.html  svg.html
public/manual/loading/: conf.html  loading.html
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  about.hbs  about.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: configuration.rs  edit.rs  export.rs  info.rs  main.rs  parse.rs  result_status.rs  svg.rs
src-tauri/src/edit/: utils.rs
src/components/: AppReadyDummy.tsx  ControlButton.tsx  Controls.tsx  FileLoader.tsx  Graph.tsx  HoverInfo.tsx  Loading.tsx  RustEvents.tsx
src/components/Controls/: index.tsx
src/components/Controls/ControlButton/: index.tsx
src/components/Controls/PNGModal/: index.tsx
src/components/Graph/: FreeForm.tsx  hovering.ts  index.tsx  mouseEvents.ts  style.css
src/components/Graph/FillModal/: index.tsx
src/components/Graph/FreeForm/: index.tsx  style.css
src/components/Modal/: index.tsx
src/components/Settings/: ElementSettings.tsx  Input.tsx  RoutingSettings.tsx  SettingsButton.tsx  checkbox.css  colour.css  index.tsx  mask.css  number.css  select.css
src/components/Settings/BaseSettings/: generateBaseConfig.ts  index.tsx
src/components/Settings/BaseSettings/BaseSettingsInput/: index.tsx
src/components/Settings/BaseSettings/utils/: addToBaseSettings.ts  generateBaseConfig.ts  populateBaseConfig.ts
src/components/Settings/DisplayModal/: index.tsx  style.css
src/components/Settings/ElementSettings/: generateConfig.ts  index.tsx
src/components/Settings/ElementSettings/FillOverrides/: index.tsx
src/components/Settings/ElementSettings/Input/: BooleanInput.tsx  ColourBoundaries.tsx  CoordinatesInput.tsx  NumberInput.tsx  RoutingInput.tsx  TextInput.tsx  index.tsx
src/components/Settings/ElementSettings/utils/: addToElementSettings.ts  generateConfig.ts  (+1 more)
src/components/Settings/Input/: BooleanInput.tsx  ColourBoundaries.tsx  CoordinatesInput.tsx  NumberInput.tsx  RoutingInput.tsx  TextInput.tsx  index.tsx
src/components/Settings/utils/: generateConfiguration.ts  populateFromConfiguration.ts  populateFromConfiguration.tsx
src/components/icons/: Close.tsx  IcTwotoneFileOpen.tsx  RoundBorderOuter.tsx  SVGFunctionComponentType.ts  TwotoneCameraEnhance.tsx  TwotoneFileOpen.tsx  TwotoneSettings.tsx  TwotoneTextFields.tsx  WarningRounded.tsx
src/components/icons/TwotoneMemory/: index.tsx  style.css
src/types/: baseResponse.ts  configuration.ts  css.ts  displayMap.ts  freeForm.ts  svg.ts  transform.ts
src/utils/: getSvg.ts  loadUtils.ts  svgPanZoom.ts
(+2 files in other folders)
