[package]
name = "manycore_visualiser"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "dialog-save", "dialog-open", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
manycore_parser = { git = "https://github.com/joe2k01/manycore_parser.git", version = "0.4.2" }
# git = "https://github.com/joe2k01/manycore_svg.git"
manycore_svg = {path = "/home/joe2k01/Documents/meng/manycore_svg" , version = "0.4.3" }
# TODO: Optimise what resvg features are included. Don't think we need raster-images and system-fonts
resvg = "0.40.0"
quick-xml = { version = "0.31.0", features = ["serialize"] }
uuid = { version = "1.7.0", features = ["v4"] }
which = "6.0.0"
chrono = "0.4.35"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
